fixe nowrap

--- a/client/style/molecule/_list-item.scss
+++ b/client/style/molecule/_list-item.scss
@@ -30,14 +30,25 @@
 		}
 	}
 	.list-item-content {
-		margin: 0 85px 0 60px;
 		max-width: 100%;
 		.title {
 			margin:0;
 			font-size: 1.8rem;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			overflow: hidden;
+			height:21px;
+			width:calc(80% - 60px);
+			margin-left:85px;
 		}
 		.text {
 			margin:0;
+			text-overflow: ellipsis;
+			white-space: nowrap;
+			overflow: hidden;
+			height:20px;
+			width:calc(80% - 60px);
+			margin-left:85px;
 			span {
 				font-weight: bold;
 				font-style: italic;
@@ -51,13 +62,10 @@
 		border-left:10px solid color("grey", "lighten-1");
 	}
 	.list-item-content .title, .list-item-content .text {
-		@include multi-line-ellipsis(1.6em, 1, white);
+		
 	}
 	&:nth-child(2n) {
 		background-color: #fbfbfb;
-		.list-item-content .title, .list-item-content .text {
-			@include multi-line-ellipsis(1.6em, 1, #fbfbfb);
-		}
 	}
 	.list-item-action {
 		position:absolute;
